# batcore

./: .gitignore  .readthedocs.yaml  .space.kts  Container.py  Dockerfile  Experiments.ipynb  INSTALL.md  LICENSE  Mapping.py  README.md  REQUIREMENT.md  Recommender.py  estimator.py  example.py  experiments.py  hyper.py  mapping.py  params.py  pipeline.py  pyproject.toml  recommender.py  requirements.txt  run.py  setup.cfg  setup.py  utils.py
AliasMatching/: LevensteinDistance.py  utils.py
Counter/: BusFactorCounter.py  CoreWorkloadCounter.py  CounterBase.py  ExpertiseCounter.py  FaRCounter.py
Dataset/: StandardDataset.py  dataset.py  iterator.py  utils.py
Iterator/: iterator.py
Metrics/: metrics.py
Recommender/: recommender.py
RecommenderBase/: recommender.py
RevFinder/: dataset.py  revfinder.py  utils.py
Tester/: SimulTester.py  TesterBase.py  tester.py
Tie/: SimilarityRecommender.py  TextMiningRecommender.py  TextRecommender.py  Tie.py  dataset.py  utils.py
baselines/: __init__.py
batcore/: __init__.py
data/: DataLoader.py  GerritLoader.py  SpecialDatasets.py  StandardDataset.py  StreamDataLoader.py  __init__.py  aggregators.py  dataset.py  utils.py
dataset/: DatasetBase.py  GerritLoader.py  SpecialDatasets.py  StandardDataset.py  __init__.py  utils.py
docs/: Makefile  alias.rst  api.rst  basemodels.rst  conf.py  data.rst  datadescription.rst  dataloader.rst  examples.rst  index.rst  make.bat  models.rst  overview.rst  recmetrics.rst  requirements.txt  simulmetrics.rst  tester.rst
env/: als_recommender.py  recommender.py  tester.py
(+92 files in other folders)
