[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batcore"
version = "0.1.1"
authors = [
  { name="Farid", email="kraalfar@gmail.com" },
]
description = "BaTCoRe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JetBrains-Research/batcore"
"Bug Tracker" = "https://github.com/JetBrains-Research/batcore/issues"
"Docs" = "https://batcore.readthedocs.io/en/latest/index.html#"